--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,1 @@
-theme: minima
-
-defaults:
-  - scope:
-      path: ""
-    values:
-      head:
-        - '<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/kaTeX/0.15.0/katex.min.css">'
-        - '<script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/kaTeX/0.15.0/katex.min.js"></script>'
-        - '<script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/kaTeX/0.15.0/contrib/auto-render.min.js"></script>'
+remote_theme: "pages-themes/slate@v0.1.0"
